--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.3",
+    "vue-masonry-css": "^1.0.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
