--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-cookies": "^1.8.3",
     "vue-masonry-css": "^1.0.3",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
   },
