--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "swiper": "^5.4.5",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-cookies": "^1.8.3",
     "vue-masonry-css": "^1.0.3",
     "vue-router": "^3.5.1",
